Fix spacing around Erhaltungsbericht section - put margin below instead of above
CHANGE:
Moved margin from top to bottom of Erhaltungsbericht section to balance
spacing better. The space now appears below the button/link instead of
above the divider line, creating a more balanced visual appearance.

BEFORE: margin-top: 1em, padding-top: 1em (2em total above)
AFTER: padding-top: 1em, margin-bottom: 1em (1em above, 1em below)

This provides better visual balance, especially for Abholerpaket where
there's nothing above the section.

--- a/assets/stylesheets/vzekc-verlosung.scss
+++ b/assets/stylesheets/vzekc-verlosung.scss
@@ -712,8 +712,8 @@
 
     // Erhaltungsbericht section (for winner)
     .erhaltungsbericht-section {
-      margin-top: 1em;
       padding-top: 1em;
+      margin-bottom: 1em;
       border-top: 1px solid var(--success);
 
       .create-erhaltungsbericht-button {
@@ -723,8 +723,8 @@
 
     // Erhaltungsbericht link section (visible to all when created)
     .erhaltungsbericht-link-section {
-      margin-top: 1em;
       padding-top: 1em;
+      margin-bottom: 1em;
       border-top: 1px solid var(--success);
 
       .erhaltungsbericht-link {
